--- a/src/style.css
+++ b/src/style.css
@@ -220,7 +220,7 @@ button:hover {
   -moz-appearance: none;
   appearance: none;
   -webkit-print-color-adjust: exact;
-  color-adjust: exact;
+  print-color-adjust: exact;
   border-radius: 5px;
 }
 
